--- a/provider-api/openapi/gadgets.yaml
+++ b/provider-api/openapi/gadgets.yaml
@@ -20,6 +20,12 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/Gadget'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
     post:
       summary: Create new gadget
@@ -66,6 +72,12 @@ paths:
             application/json:
               schema:
                 $ref: '#/components/schemas/Error'
+        '500':
+          description: Internal Server Error
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
 
 components:
   schemas:
@@ -99,9 +111,10 @@ components:
 
     Error:
       type: object
+      additionalProperties: false
       required:
         - message
       properties:
         message:
           type: string
-          example: Resource not found.
+          example: Error Message.
